--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-3.11MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
+  - {name: 🇺🇸 美国-782.3KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇦 加拿大-5.33MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-604.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-481.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-432.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-423.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-486.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-212.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-3.67MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-464.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-436.6KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-432.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
