--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-782.3KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-212.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-484.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-481.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇬🇧 英国-487.7KB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
+  - {name: 🇨🇳 中国-391.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇭🇰 香港-3.67MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-464.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-436.6KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -66,6 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -88,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -104,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -129,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-948.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
